--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,9 +1,12 @@
 <AuthorBanner />
+<div>
+  <p>Welcome to my 💻 Developer space 😁</p>
+</div>
 
-Welcome to the Gatsby Starter Chronoblog! This starter will help you quickly launch a personal website using [Chronoblog Gatsby Theme](https://github.com/Chronoblog/gatsby-theme-chronoblog). Replace this text with your own here: `src/pages/index.mdx`
+If you're Korean you can also find me at :🚀[RocketPunch](https://www.rocketpunch.com/@cyongchoi88)
 
----
-
-<FeedSearch />
-<Tags />
+<div>
+  <FeedSearch />
+  <Tags />
+</div>
 <FeedItems />
